--- a/client/views/index.html
+++ b/client/views/index.html
@@ -108,7 +108,7 @@
         <h2 class="center">Pricing</h2>
       </div>
       <div class="row">
-        <div class="box essentials">
+        <div class="four columns box essentials">
           <h3>Essential</h3>
           <p>Web site design & development</p>
           <ul>
@@ -124,7 +124,7 @@
           </div>
           {{>stripe price="299900" name="Essentials" desc="Basic Website"}}
         </div>
-        <div class="box pro">
+        <div class="four columns box pro">
           <h3>Pro</h3>
           <p>Custom web application development</p>
           <ul>
@@ -140,7 +140,7 @@
           </div>
           {{>stripe price="599900" name="Pro" desc="Web Application Development"}}
         </div>
-        <div class="box server">
+        <div class="four columns box server">
           <h3>Hosting</h3>
           <p>24/7 Hosting and Monitoring</p>
           <ul>
