--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,7 +1,7 @@
 <head>
   <title>Common Engineering</title>
 
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="/favicon.ico">
 
   <script src="https://use.typekit.net/ujm5uci.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
